Permitir reservas por rango de dias
